// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplainerModal should match the snapshot 1`] = `
<div>
  <section>
    <button
      aria-label="Click me!"
      class="show"
      type="button"
    />
    <div />
  </section>
</div>
`;

exports[`ExplainerModal should match the snapshot when shown 1`] = `
<div>
  <section>
    <button
      aria-label="Click me!"
      class="show"
      type="button"
    />
    <div>
      <dialog
        class="overlay"
      >
        <p
          class="info"
        >
          Wikipedia is an online free-content encyclopedia helping to create a world where everyone can freely share and access all available knowledge. It is supported by the Wikimedia Foundation and consists of freely editable content.
        </p>
        <button
          class="close"
          type="button"
        >
          Close
        </button>
      </dialog>
    </div>
  </section>
</div>
`;
